[package]
name    = "xkb-x11rb"
version = "0.1.0"
edition = "2018"

authors = ["Po-Yeh Chen <smb374.cs08@nctu.edu.tw>"]
license = "WTFPL"

description = "Rusty wrapper around libxkbcommon, using x11rb as xcb binding."
repository  = "https://github.com/smb3744/rust-xkb-x11rb"
keywords    = ["xkb", "xkbcommon", "x11", "xcb", "x11rb"]

[dependencies]
bitflags = "~1.3"
libc     = "~0.2"
ffi      = { package = "xkbcommon-ffi", version = "~0.1", git = "https://github.com/smb374/xkbcommon-ffi" }

[dependencies.x11rb]
version  = "0.9"
features = ["xkb", "allow-unsafe-code"]
optional = true

[features]
default = ["x11"]
static = ["ffi/static"]
x11    = ["ffi/x11", "x11rb"]
